--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="shortcut icon" type="image/png" href="/assets/image/azvinquer.png" />
+    <link rel="shortcut icon" type="image/png" href="./assets/image/azvinquer.png" />
     <title>Quiz JavaScript</title>
   </head>
   <body>
